--- a/Assignement7 Malik Ali Routes/package.json
+++ b/Assignement7 Malik Ali Routes/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "todoapp",
+  "name": "assignement7-malik-ali-routes",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^7.0.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
@@ -23,7 +24,6 @@
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.14",
     "globals": "^15.12.0",
-    "vite": "^6.0.1",
-    "vite-plugin-pwa": "^0.21.0"
+    "vite": "^6.0.1"
   }
 }
